# api-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: entrypoint.sh
src/: config.py
src/core/: asgi.py  exceptions.py
src/core/api/: __init__.py  routers.py
src/core/api/exceptions/: details.py  dto.py
src/core/api/exceptions/http/: base.py  common.py
src/core/dependencies/: containers.py  http.py  utils.py
src/core/tests/: fixtures.py  test_fastapi.py
src/core/types/: dto.py
src/modules/auth/: constants.py  dto.py  routers.py
src/modules/auth/dependencies/: jwt.py
src/modules/auth/exceptions/: application.py  details.py  dto.py  http.py
src/modules/auth/services/: jwt.py  ton.py
